helm-charts/my-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: myapp
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
