helm-charts/my-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: myapp
  #annotations:
  #  cert-manager.io/cluster-issuer: letsencrypt-issuer-dns-do
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.bekmee.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 8080
  tls:
  - hosts:
    - nginx.bekme.com
    secretName: nginx-cert-secret
